<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
    >

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="com.m68476521.mike.baking.activities.RecipeStepDetail">

            <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="?attr/homeAsUpIndicator"/>

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/playerView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1">

            </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

            <ImageView
                android:id="@+id/image_view_background"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/image_desc"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                />

            <TextView
                android:id="@+id/short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textSize="@dimen/title_sizeXXX"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/playerView"
                tools:layout_constraintTop_creator="1"
                android:textColor="@color/cardview_light_background"
                tools:text="sort description"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cardview_light_background"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:textSize="@dimen/title_sizeXX"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/short_description"
                tools:text="description"/>

            <Button
                android:id="@+id/btn_previous_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/previous"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"/>

            <Button
                android:id="@+id/btn_next_step"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>